Acrescentado valor das vendas

--- a/vendas.html
+++ b/vendas.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Página e Vendas</h1>
+    <h2>Valor da compra R$ 5000.00</h2>
     <a href="index.html"><Var>Voltar para a página home</Var></a>
 </body>
 </html>
